Fix color contrast issue in mobile screen

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -59,6 +59,7 @@ header nav i {
   line-height: 16px;
   text-align: left;
   color: #172B4D;
+  font-size: 18px;
 }
 
 .social-media-top {
@@ -495,7 +496,7 @@ header nav i {
     margin-left: 10%;
     line-height: 16px;
     text-align: left;
-    color: #EBEBFF;
+    color: #172B4D;
   }
 
   
